KAlarm Change Log

=== Version 3.5.5 (KDE Gear 23.04) --- 30 December 2022 ===
* Disallow setting environment variables in command alarm command line.
* In Preferences dialog, if OK shows warning message, don't close dialog until user responds.
* Allow setting null command line for invoking terminal to run command alarms in.
* If only one standard command is available to invoke terminal to run command alarms in, use it as default.
* Show accuracy warning if short time-from-now specified in Edit Alarm dialogue [KDE Bug 463278]

=== Version 3.5.4 (KDE Gear 22.12.1) --- 29 December 2022 ===
* Update date picker display when a resource becomes disabled.
* Use KAlarm's default time zone to evaluate trigger times for working time alarms.
* Fix handling of quoted path if configured for the terminal for command alarms.
* Allow AM/PM control in Edit Alarm dialogue to be tabbed into [KDE Bug 463310]

=== Version 3.5.3 (KDE Gear 22.12) --- 18 November 2022 ===
* Provide build option to disable use of X11, even if it is available.
* Fix daily alarms continually triggering just before end of daylight savings time [KDE Bug 461713]

=== Version 3.5.2 (KDE Gear 22.08.2) --- 4 October 2022 ===
* Fix possible crash when alarm restored at login is deferred [KDE Bug 459901]

=== Version 3.5.1 (KDE Gear 22.08.1) --- 15 August 2022 ===
* Fix regression introduced in version 3.5.0:
    In some locales, displayed times were wrongly formatted.

=== Version 3.5.0 (KDE Gear 22.08) --- 19 July 2022 ===
* Provide options to build and/or run KAlarm without any Akonadi dependency.
* Set volume correctly for repeated audio alarms [KDE Bug 456845]

=== Version 3.4.1 (KDE Gear 22.04.1) --- 2 May 2022 ===
* Fix checkboxes being disabled in Preferences dialogue.
* Fix time spin boxes being displayed in the wrong position.
* Fix crash when Try clicked to stop audio alarm with fade [KDE Bug 452962]
* Don't show volume fade controls if Phonon backend doesn't support fade.