@@ -1,5 +1,8 @@
 KAlarm Change Log
 
+=== Version (Qt6) --- 4 May 2023 ===
+* Remove migration of pre-Akonadi KResources calendar configuration.
+
 === Version 3.5.5 (KDE Gear 23.04) --- 30 December 2022 ===
 * Disallow setting environment variables in command alarm command line.
 * In Preferences dialog, if OK shows warning message, don't close dialog until user responds.
